<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.ricardosimoes.bluebike.RecordingActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/recording_date" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/recording_time" />
    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:shrinkColumns="*"
            android:stretchColumns="*"


            >

            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:gravity="center_horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/label_speed"
                    android:id="@+id/rec_textView2"
                    android:fontFamily="sans-serif-condensed"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/label_cadence"
                    android:id="@+id/rec_textView2cadence"
                    android:fontFamily="sans-serif-condensed"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.5" />


            </TableRow>

            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:gravity="center_horizontal">




                TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/no_value"
                    android:id="@+id/speed"
                    android:fontFamily="sans-serif-condensed"
                    android:textAlignment="center"
                    android:textSize="35dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.5" />

                TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/no_value"
                    android:id="@+id/cadence"
                    android:fontFamily="sans-serif-condensed"
                    android:textAlignment="center"
                    android:textSize="35dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.5" />


            </TableRow>







        </TableLayout>




        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/no_value"
                android:id="@+id/rec_speed_max"

                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.25" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/no_value"
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/rec_speed_avg"
                android:layout_weight="0.25"
                android:gravity="center"
                android:layout_gravity="center_horizontal" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/no_value"
                android:id="@+id/rec_cadence_max"
                android:fontFamily="sans-serif-condensed"
                android:layout_weight="0.25"
                android:gravity="center"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/no_value"
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/rec_cadence_avg"
                android:layout_weight="0.25"
                android:gravity="center"
                android:layout_gravity="center_horizontal" />



        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/label_max"
                android:id="@+id/rec_textView5"
                android:fontFamily="sans-serif-condensed"
                android:labelFor="@id/rec_speed_max"
                android:layout_weight="0.25"
                android:layout_gravity="center_horizontal"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/label_avg"
                android:id="@+id/rec_textView6"
                android:fontFamily="sans-serif-condensed"
                android:layout_weight="0.25"
                android:layout_gravity="center_horizontal"
                android:gravity="center" />




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/label_max"
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/textView9"
                android:labelFor="@id/rec_cadence_max"
                android:layout_weight="0.25"
                android:layout_gravity="center_horizontal"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/label_avg"
                android:id="@+id/textView10"
                android:labelFor="@id/rec_cadence_avg"
                android:layout_weight="0.25"
                android:layout_gravity="center_horizontal"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_odometer"
                android:id="@+id/rec_textView12"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                style="@style/Text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/no_value"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:id="@+id/rec_odometer"

                style="@style/Text" />
        </LinearLayout>



    </LinearLayout>



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/recording_data"
            android:paddingTop="15sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:fontFamily="sans-serif-condensed"
            android:layout_width="match_parent"
            android:layout_height="100dp" android:id="@+id/speedXYPlot"
            style="@style/Text">


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">


        <LinearLayout
            android:orientation="vertical"
            android:fontFamily="sans-serif-condensed"
            android:layout_width="match_parent"
            android:layout_height="100dp" android:id="@+id/cadenceXYPlot"
            style="@style/Text"></LinearLayout>


    </LinearLayout>

</LinearLayout>
